Constraint added by Shift Ctrl C doesn't update effect on child object #38291

Closed
opened 2014-01-20 07:46:48 +01:00 by Leon Cheung · 6 comments
Member

System Information
Win7 64bit | FX2700M

Blender Version
Broken: 2.69.9 6cd132b
Worked: (n/a)

Short description of error
If adding constraint from Constraints tab for an object with child, it would be fine to update the result in 3D view, both for the parent and the child, however, if adding constraint by Shift Ctrl C, it will not immediately update the effect on child object unless operating something, such as a transformation, changing current frame, or tweaking some setting in the constraint panel.

Exact steps for others to reproduce the error
shift_ctrl_c.png
shift_ctrl_c.blend

FYI. Thanks for checking!

**System Information** Win7 64bit | FX2700M **Blender Version** Broken: 2.69.9 6cd132b Worked: (n/a) **Short description of error** If adding constraint from Constraints tab for an object with child, it would be fine to update the result in 3D view, both for the parent and the child, however, if adding constraint by Shift Ctrl C, it will not immediately update the effect on child object unless operating something, such as a transformation, changing current frame, or tweaking some setting in the constraint panel. **Exact steps for others to reproduce the error** ![shift_ctrl_c.png](https://archive.blender.org/developer/F70934/shift_ctrl_c.png) [shift_ctrl_c.blend](https://archive.blender.org/developer/F70932/shift_ctrl_c.blend) FYI. Thanks for checking!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

This issue was referenced by blender/blender-addons-contrib@59762ff0f7

This issue was referenced by blender/blender-addons-contrib@59762ff0f729607420fcfe8ad5e337a0c84f6726

This issue was referenced by 59762ff0f7

This issue was referenced by 59762ff0f729607420fcfe8ad5e337a0c84f6726
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 59762ff0f7.

Closed by commit 59762ff0f7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38291
No description provided.