Fix T38291: depgraph tagging was wrong for OBJECT_OT_constraint_add_with_targets. This now works exactly the same way as when setting the target via RNA/constraint buttons.